k8s/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: ghcr.io/chingching17/backend:latest
          ports:
            - containerPort: 8888
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /api/v1/todos
              scheme: HTTP
              port: 8888
            initialDelaySeconds: 20
            periodSeconds: 5
