k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
spec:
  containers:
    - name: frontend
      image: ghcr.io/chingching17/frontend:latest    # 需改成自己的 frontend Image
      ports:
        - containerPort: 5173
    - name: backend
      image: ghcr.io/chingching17/backend:latest    # 需改成自己的 backend Image
      ports:
        - containerPort: 8888
    - name: mongodb
      image: mongo
      ports:
        - containerPort: 27017
